--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./img/icons8-flor-de-balneario-64.png" type="image/x-icon" />
     <link rel="stylesheet" href="./stylecss/styles.css" />
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Romina Torres cosmetologa Medica</title>
   </head>
   <body>
     <header>
-      <div class="container">
+      <div class="containers">
         <a href="index.html">
           <img src="./img/icons8-flor-de-balneario-64.png" alt="logo" />
         </a>
@@ -38,18 +40,18 @@
     </header>
     <main>
       <section id="intro-section">
-        <div class="container">
+        <div class="containers">
           <h2 class="title">Cuida Tu Piel</h2>
           <div>
-            <img class="img__piel" src="./img/piel.png" alt="diferencia de piel" />
-            <img class="img__piel" src="./img/piel2.png" alt="espalda" />
+            <img class="img__piel img-fluid" src="./img/piel.png" alt="diferencia de piel" />
+            <img class="img__piel img-fluid" src="./img/piel2.png" alt="espalda" />
             <p class="cont">tu piel es el organo mas grande de tu cuerpo</p>
           </div>
           <div>
             <p class="title">dale la immportancia que se merece confiando en profecionales con experiencia</p>
           </div>
           <div>
-            <img class="img__cos" src="./img/cosmetologia.png" alt="imagenes de cosmetologia" />
+            <img class="img__cos img-fluid" src="./img/cosmetologia.png" alt="imagenes de cosmetologia" />
             <p class="cont">entendemos a las personas como seres integrales por eso queremos lograr la armonia del cuerpo exterior en el interior</p>
           </div>
         </div>
@@ -57,7 +59,7 @@
     </main>
     <footer>
       <div class="footer__">
-        <div class="container">
+        <div class="containers">
           <div class="footer__icon">
             <div>contactenos</div>
             <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
@@ -67,5 +69,7 @@
         </div>
       </div>
     </footer>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
