--- a/pages/tratamientos.html
+++ b/pages/tratamientos.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="../img/icons8-flor-de-balneario-64.png" type="image/x-icon" />
     <link rel="stylesheet" href="../stylecss/styles.css" />
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Romina Torres cosmetologa Medica</title>
   </head>
   <body>
     <header>
-      <div class="container">
+      <div class="containers">
         <a href="index.html"></a>
         <img src="../img/icons8-flor-de-balneario-64.png" alt="logo" />
         <h1>Romina Torres cosmetologa</h1>
@@ -37,7 +39,7 @@
     </header>
     <main>
       <section class="card__container">
-        <div class="container">
+        <div class="containers">
           <div class="title__tratamientos">Tratamientos</div>
           <div class="card">
             <img class="card.img" src="../img/mascarilla.png" alt="mascara facial" />
@@ -57,7 +59,7 @@
         </div>
       </section>
       <section class="card__container">
-        <div class="container">
+        <div class="containers">
           <div class="card">
             <img class="card.img" src="../img/mesofacial.png" alt="mesoterapia facial" />
             <h2 class="card.title">combo 4</h2>
@@ -76,7 +78,7 @@
         </div>
       </section>
       <section class="card__container">
-        <div class="container">
+        <div class="containers">
           <div class="card">
             <img class="card.img" src="../img/microblading.png" alt="microblading" />
             <h2 class="card.title">combo 7</h2>
@@ -92,7 +94,7 @@
     </main>
     <footer>
       <div class="footer__">
-        <div class="container">
+        <div class="containers">
           <div class="footer__icon">
             <div>contactenos</div>
             <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
@@ -102,5 +104,7 @@
         </div>
       </div>
     </footer>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
