--- a/pages/contactenos.html
+++ b/pages/contactenos.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <div class="containers">
+      <div class="container">
         <a href="index.html"></a>
         <img src="../img/icons8-flor-de-balneario-64.png" alt="logo" />
         <h1>Romina Torres cosmetologa</h1>
@@ -38,7 +38,7 @@
       </div>
     </header>
     <section id="intro-section">
-      <div class="containers">
+      <div class="container">
         <form class="form" action="">
           <fieldset>
             <legend class="legend">Reservas y Consultas</legend>
@@ -75,7 +75,7 @@
     </section>
     <footer>
       <div class="footer__">
-        <div class="containers">
+        <div class="container">
           <div class="footer__icon">
             <div>contactenos</div>
             <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
