--- a/pages/depilacion.html
+++ b/pages/depilacion.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <div class="containers">
+      <div class="container">
         <a href="index.html"></a>
         <img src="../img/icons8-flor-de-balneario-64.png" alt="logo" />
         <h1>Romina Torres cosmetologa</h1>
@@ -39,7 +39,7 @@
     </header>
     <main>
       <section id="intro-section">
-        <div class="containers">
+        <div class="container">
           <div id="container__table">
             <h3>Hombres</h3>
             <table>
@@ -118,7 +118,7 @@
         </div>
       </section>
       <section>
-        <div class="containers">
+        <div class="container">
           <div id="container__table">
             <h3>Mujeres</h3>
             <table>
