--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <div class="containers">
+      <div class="container">
         <a href="index.html"></a>
         <img src="../img/icons8-flor-de-balneario-64.png" alt="logo" />
         <h1>Romina Torres cosmetologa</h1>
@@ -39,7 +39,7 @@
     </header>
     <main>
       <section id="intro-section">
-      <div class="containers">
+      <div class="container">
         <img class="bioImg" src="../img/cosmetologa.png" alt="cosmetologa Medica" />
           <p class="cont lead">
             Me llamo Romina Torres, Como profesional, es mi finalidad, trabajar
@@ -66,7 +66,7 @@
     </main>
     <footer>
       <div class="footer__">
-        <div class="containers">
+        <div class="container">
           <div class="footer__icon">
             <div>contactenos</div>
             <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
