--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
           <div id="carousel-index" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./img/piel.png" class="d-block w-100" alt="..." />
+                <img src="./img/piel.png" class="d-block w-100" alt="diferencias de cuidado" />
               </div>
               <div class="carousel-item">
-                <img src="./img/piel2.png" class="d-block w-100" alt="..." />
+                <img src="./img/piel2.png" class="d-block w-100" alt="Espalda" />
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carousel-index" data-bs-slide="prev">
