--- a/pages/tratamientos.html
+++ b/pages/tratamientos.html
@@ -52,18 +52,24 @@
           <div class="title__tratamientos">Tratamientos</div>
           <div class="card col-12 col-md-6 col-lg-4">
             <img class="card.img" src="../img/mascarilla.png" alt="mascara facial" />
-            <h2 class="card.title">combo 1</h2>
-            <p class="card.content">Higiene facial, expoliacion manual, puntas de diamante, mascara, serum, hidratacion y fotoprotector. $1300</p>
+            <div class="intro">
+              <h2 class="card.title">combo 1</h2>
+              <p class="card.content">Higiene facial, expoliacion manual, puntas de diamante, mascara, serum, hidratacion y fotoprotector. $1300</p>
+            </div>
           </div>
           <div class="card col-12 col-md-6 col-lg-4">
             <img class="card.img" src="../img/puntadediam.png" alt="punta de diamante" />
-            <h2 class="card.title">combo 2</h2>
-            <p class="card.content">Higiene facial, expoliacion manual, puntas de diamante, extracciones manuales, mascara, serum, hidratacion y fotoprotector. $1500</p>
+            <div class="intro">
+              <h2 class="card.title">combo 2</h2>
+              <p class="card.content">Higiene facial, expoliacion manual, puntas de diamante, extracciones manuales, mascara, serum, hidratacion y fotoprotector. $1500</p>
+            </div>
           </div>
           <div class="card col-12 col-md-6 col-lg-4">
             <img class="card.img" src="../img/peeling.png" alt="peeling quimico" />
-            <h2 class="card.title">combo 3</h2>
-            <p class="card.content">Higiene facial, expoliacion manual, puntas de diamante, peeling quimico, mascara, serum, hidratacion y fotoprotector. $1700</p>
+            <div class="intro">
+              <h2 class="card.title">combo 3</h2>
+              <p class="card.content">Higiene facial, expoliacion manual, puntas de diamante, peeling quimico, mascara, serum, hidratacion y fotoprotector. $1700</p>
+            </div>
           </div>
         </div>
       </section>
@@ -71,18 +77,24 @@
         <div class="container row">
           <div class="card col-12 col-md-6 col-lg-4">
             <img class="card.img" src="../img/mesofacial.png" alt="mesoterapia facial" />
-            <h2 class="card.title">combo 4</h2>
-            <p class="card.content">Mesoterapia facial. $2500</p>
+            <div class="intro">
+              <h2 class="card.title">combo 4</h2>
+              <p class="card.content">Mesoterapia facial. $2500</p>
+            </div>
           </div>
           <div class="card col-12 col-md-6 col-lg-4">
             <img class="card.img" src="../img/mesocorp.png" alt="mesoterapia corporal" />
-            <h2 class="card.title">combo 5</h2>
-            <p class="card.content">Mesoterapia corporal. $3000</p>
+            <div class="intro">
+              <h2 class="card.title">combo 5</h2>
+              <p class="card.content">Mesoterapia corporal. $3000</p>
+            </div>
           </div>
           <div class="card col-12 col-md-6 col-lg-4">
             <img class="card.img" src="../img/dermapen.png" alt="dermapen" />
-            <h2 class="card.title">combo 6</h2>
-            <p class="card.content">Dermapen. $500</p>
+            <div class="intro">
+              <h2 class="card.title">combo 6</h2>
+              <p class="card.content">Dermapen. $500</p>
+            </div>
           </div>
           <div class="card col-12 col-md-6 col-lg-4">
             <img class="card.img" src="../img/microblading.png" alt="microblading" />
@@ -93,8 +105,10 @@
           </div>
           <div class="card col-12 col-md-6 col-lg-4">
             <img class="card.img" src="../img/perfilado.png" alt="perfilado de cejas" />
-            <h2 class="card.title">combo 8</h2>
-            <p class="card.content">Diseño y perfilado de cejas. $500</p>
+            <div class="intro">
+              <h2 class="card.title">combo 8</h2>
+              <p class="card.content">Diseño y perfilado de cejas. $500</p>
+            </div>
           </div>
         </div>
       </section>
