--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,44 +4,55 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="../img/icons8-flor-de-balneario-64.png" type="image/x-icon"/>
-    <link rel="stylesheet" href="../stylecss/styles.css" />
+    <meta name="description" content="La cosmetología médica, es un profesión que se ocupa de la piel sana o con diversas patologías, como acné,rosácea,piel sensible o atópica,etc.">
+    <meta name="keywords" content="cosmetologia, peeling facial, mesoterapia, montevideo, depilacion definitiva">
+    <link rel="shortcut icon" href="../img/icons8-flor-de-balneario-64.png" type="image/x-icon"/>   
     <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap"rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <title>Romina Torres cosmetologa Medica</title>
+    <title>Cosmetologa Medica | Romina Torres </title>
   </head>
   <body>
     <header>
       <div class="container">
         <a href="index.html"></a>
-        <img src="../img/icons8-flor-de-balneario-64.png" alt="logo" />
+        <img src="../img/icons8-flor-de-balneario-64.png" id="logo" alt="logo" />
         <h1>Romina Torres cosmetologa</h1>
-        <nav>
-          <ul class="nav__list">
-            <li><a class="nav__link" href="../index.html">Inicio</a></li>
-            <li>
-              <a class="nav__link" href="tratamientos.html">Tratamientos</a>
-            </li>
-            <li>
-              <a class="nav__link" href="depilacion.html">Depilacion</a>
-            </li>
-            <li>
-              <a class="nav__link" href="nosotros.html">Nosotros</a>
-            </li>
-            <li>
-              <a class="nav__link" href="contactenos.html">Contacto</a>
-            </li>
-          </ul>
+        <nav class="navbar navbar-expand-md navbar-light">
+          <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+              <ul class="navbar-nav d-flex justify-content-center align-items-center">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="tratamientos.html">Tratamientos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="depilacion.html">Depilacion</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contactenos.html">Contactenos</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </nav>
       </div>
     </header>
     <main>
-      <section id="intro-section">
-      <div class="container">
+      <section>
+      <div class="container cont__bio">
         <img class="bioImg" src="../img/cosmetologa.png" alt="cosmetologa Medica" />
-          <p class="cont lead">
+          <p id="p__bio">
             Me llamo Romina Torres, Como profesional, es mi finalidad, trabajar
             con ética (escuchar y comprender necesidades) dando lo mejor de mí
             en los tratamientos. Soy Dermocosmiatra (Cosmetóloga) de profesión,
@@ -61,7 +72,7 @@
           </p>
         </section>
         <div class="map"><h2>Estamos en:</h2>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3273.9291399271992!2d-56.21969298494043!3d-34.858007780394445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a1d546ff5804b7%3A0xd0fec2ea6c32544b!2sJuan%20Antonio%20Artigas%204107%2C%2011900%20Montevideo%2C%20Departamento%20de%20Montevideo!5e0!3m2!1ses-419!2suy!4v1668297059571!5m2!1ses-419!2suy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3273.9291399271992!2d-56.21969298494043!3d-34.858007780394445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a1d546ff5804b7%3A0xd0fec2ea6c32544b!2sJuan%20Antonio%20Artigas%204107%2C%2011900%20Montevideo%2C%20Departamento%20de%20Montevideo!5e0!3m2!1ses-419!2suy!4v1668297059571!5m2!1ses-419!2suy" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
       </div>
     </main>
     <footer>
