--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./img/icons8-flor-de-balneario-64.png" type="image/x-icon" />
-    <link rel="stylesheet" href="./stylecss/styles.css" />
+    <meta name="description" content="La cosmetología médica, es un profesión que se ocupa de la piel sana o con diversas patologías, como acné,rosácea,piel sensible o atópica,etc." />
+    <meta name="keywords" content="cosmetologia, peeling facial, mesoterapia, montevideo, depilacion definitiva" />
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Romina Torres cosmetologa Medica</title>
+    <title>Cosmetologa Medica | Romina Torres</title>
   </head>
   <body>
     <header>
       <div class="container">
         <a href="index.html">
-          <img src="./img/icons8-flor-de-balneario-64.png" alt="logo" />
+          <img src="./img/icons8-flor-de-balneario-64.png" id="logo" alt="logo" />
         </a>
         <h1>Romina Torres cosmetologa</h1>
         <nav class="navbar navbar-expand-md navbar-light">
