--- a/pages/contactenos.html
+++ b/pages/contactenos.html
@@ -4,36 +4,47 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="La cosmetología médica, es un profesión que se ocupa de la piel sana o con diversas patologías, como acné,rosácea,piel sensible o atópica,etc." />
+    <meta name="keywords" content="cosmetologia, peeling facial, mesoterapia, montevideo, depilacion definitiva" />
     <link rel="shortcut icon" href="../img/icons8-flor-de-balneario-64.png" type="image/x-icon" />
-    <link rel="stylesheet" href="../stylecss/styles.css" />
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Romina Torres cosmetologa Medica</title>
+    <title>Cosmetologa Medica | Contactenos</title>
   </head>
   <body>
     <header>
       <div class="container">
         <a href="index.html"></a>
-        <img src="../img/icons8-flor-de-balneario-64.png" alt="logo" />
+        <img src="../img/icons8-flor-de-balneario-64.png" id="logo" alt="logo" />
         <h1>Romina Torres cosmetologa</h1>
-        <nav>
-          <ul class="nav__list">
-            <li><a class="nav__link" href="../index.html">Inicio</a></li>
-            <li>
-              <a class="nav__link" href="tratamientos.html">Tratamientos</a>
-            </li>
-            <li>
-              <a class="nav__link" href="depilacion.html">Depilacion</a>
-            </li>
-            <li>
-              <a class="nav__link" href="nosotros.html">Nosotros</a>
-            </li>
-            <li>
-              <a class="nav__link" href="contactenos.html">Contacto</a>
-            </li>
-          </ul>
+        <nav class="navbar navbar-expand-md navbar-light">
+          <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+              <ul class="navbar-nav d-flex justify-content-center align-items-center">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="tratamientos.html">Tratamientos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="depilacion.html">Depilacion</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contactenos.html">Contactenos</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </nav>
       </div>
     </header>
@@ -59,7 +70,7 @@
               Mujer
               <input type="radio" name="sexo" id="mujer" />
             </div>
-            <div class="form__textarea">
+            <div>
               <label for="mensaje">Mensaje:</label>
             </div>
             <div class="form__textarea">
