--- a/pages/tratamientos.html
+++ b/pages/tratamientos.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="La cosmetología médica, es un profesión que se ocupa de la piel sana o con diversas patologías, como acné,rosácea,piel sensible o atópica,etc.">
+    <meta name="keywords" content="cosmetologia, peeling facial, mesoterapia, montevideo, depilacion definitiva">
     <link rel="shortcut icon" href="../img/icons8-flor-de-balneario-64.png" type="image/x-icon" />
-    <link rel="stylesheet" href="../stylecss/styles.css" />
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Romina Torres cosmetologa Medica</title>
+    <title>Cosmetologa Medica | Tratamientos </title>
   </head>
   <body>
     <header>
       <div class="container">
         <a href="index.html"></a>
-        <img src="../img/icons8-flor-de-balneario-64.png" alt="logo" />
+        <img src="../img/icons8-flor-de-balneario-64.png" id="logo" alt="logo" />
         <h1>Romina Torres cosmetologa</h1>
         <nav class="navbar navbar-expand-md navbar-light">
           <div class="container-fluid">
@@ -70,12 +72,7 @@
               <h2 class="card.title">combo 3</h2>
               <p class="card.content">Higiene facial, expoliacion manual, puntas de diamante, peeling quimico, mascara, serum, hidratacion y fotoprotector. $1700</p>
             </div>
-          </div>
-        </div>
-      </section>
-      <section class="container-fluid">
-        <div class="container row">
-          <div class="card col-12 col-md-6 col-lg-4">
+          </div><div class="card col-12 col-md-6 col-lg-4">
             <img class="card.img" src="../img/mesofacial.png" alt="mesoterapia facial" />
             <div class="intro">
               <h2 class="card.title">combo 4</h2>
@@ -111,7 +108,6 @@
             </div>
           </div>
         </div>
-      </section>
     </main>
     <footer>
       <div class="footer__">
