--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -51,7 +51,7 @@
     <main>
       <section>
       <div class="container cont__bio">
-        <img class="bioImg" src="../img/cosmetologa.png" alt="cosmetologa Medica" />
+        <img class="bioImg" src="../img/cosmetologa.jpg" alt="cosmetologa Medica" />
           <p id="p__bio">
             Me llamo Romina Torres, Como profesional, es mi finalidad, trabajar
             con ética (escuchar y comprender necesidades) dando lo mejor de mí
